<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InterestFragment">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/image1"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/todo" />
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:id="@+id/software_testing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/software_testing"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Sorting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sorting"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/SQL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sql"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Stack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stack"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Stl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stl"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Strings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strings"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Arrays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrays"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

        </com.google.android.material.chip.ChipGroup>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/todo"
        android:src="@android:drawable/ic_menu_send"
        tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>